--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
   </head>
   <body>
     <h1>Welcome to the Meteo App</h1>
-    <footer>Coded by Naglaa Essam</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/NaglaEssam12" target="_blank">
+        Naglaa Essam</a
+      >
+      code hosted on
+      <a href="https://github.com/NaglaEssam12/weather-forecast" target="_blank"
+        >Github</a
+      >
+      and website hosted
+      <a
+        href="https://weather-forecast-shecodes-project.netlify.app/"
+        target="_blank"
+        >on Netlify</a
+      >
+    </footer>
   </body>
 </html>
