--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <a href="https://github.com/NaglaEssam12" target="_blank">
         Naglaa Essam</a
       >
-      code hosted on
+      is
       <a href="https://github.com/NaglaEssam12/weather-forecast" target="_blank"
-        >Github</a
+        >open-sourced on Github</a
       >
-      and website hosted
+      and
       <a
         href="https://weather-forecast-shecodes-project.netlify.app/"
         target="_blank"
-        >on Netlify</a
+        >hosted on Netlify</a
       >
     </footer>
   </body>
