--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <title>Meteo App</title>
   </head>
   <body>
-    <h1>Welcome to the Meteo App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city ..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Friday 23:42, broken clouds
+          <br />
+          Humidity: 83%, Wind: 3.09km/h
+        </p>
+      </div>
+      <div>⛅ 12°C</div>
+    </main>
+
     <footer>
-      Coded by
-      <a href="https://github.com/NaglaEssam12" target="_blank">
-        Naglaa Essam</a
-      >
-      is
+      This project was coded by
+      <a href="https://github.com/NaglaEssam12" target="_blank"> Naglaa Essam</a
+      >, is
       <a href="https://github.com/NaglaEssam12/weather-forecast" target="_blank"
         >open-sourced on Github</a
       >
