--- a/index.html
+++ b/index.html
@@ -48,26 +48,7 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="weather-forecast-date">Thu</div>
-              <div class="weather-forecast-icon">
-                <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-                  alt=""
-                  width="36"
-                />
-              </div>
-              <div class="weather-forecast-temperatures">
-                <div class="weather-forecast-temperature">
-                  <strong>18°</strong>
-                </div>
-                <div class="weather-forecast-temperature">12°</div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
 
       <footer>
